--- a/07_GIT/test.html
+++ b/07_GIT/test.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>반가워요</h1>
-        <h5>안녕하세요 test 브랜치에서 수정합니다</h5>
+        <h5>안녕하세요 test 브랜치에서 수정합니다22</h5>
     </body>
 </html>
