--- a/07_GIT/test.html
+++ b/07_GIT/test.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>test  test 브랜치에서 수정합니다</title>
+        <title>test test 브랜치에서 수정합니다!</title>
     </head>
     <body>
         <h1>반가워요</h1>
-        <h5>안녕하세요 test 브랜치에서 수정합니다22</h5>
+        <h5>안녕하세요 test 브랜치에서 수정합니다!</h5>
     </body>
 </html>
