--- a/05_JAVASCRIPT_OBJECT/form.html
+++ b/05_JAVASCRIPT_OBJECT/form.html
@@ -87,12 +87,15 @@
 	<hr>
 	<h2>label 태그</h2>
 	<form>
-		<label for="username">username</label>
-		<input type="text" id="username">
-		<br>
-		<label for="password">password</label>
-		<input type="password" id="password">
-		<br>
+		<fieldset>
+			<legend>로그인</legend>
+			<label for="username">username</label>
+			<input type="text" id="username">
+			<br>
+			<label for="password">password</label>
+			<input type="password" id="password">
+			<br>
+		</fieldset>
 
 		<!-- checkbox, radio 버튼 label -->
 		<input type="radio" name="gender" id="male">
